--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="dashboard-header">
                     <h1 id="dashboard-title">Minhas Turmas</h1>
                     <div class="teacher-info">
-                        <span id="teacherName">Professor</span>
+                        <span id="teacherName">Everton</span>
                     </div>
                 </div>
                 
@@ -169,8 +169,7 @@
                             <select id="reportClassSelector" class="phase-select" style="width: 100%; max-width: 400px; font-size: 1.1rem; padding: 12px; margin-top: 10px;"></select>
                         </div>
                         <div id="reportContentContainer" style="display: none;">
-                            <!-- O conteúdo dos relatórios (mapa de calor, etc.) será injetado aqui -->
-                        </div>
+                            </div>
                     </div>
     
                     <div id="viewConfig" class="dashboard-view">
@@ -481,8 +480,7 @@
         <div class="modal-content large">
             <h3 id="aiTipsTitle"><i class="fas fa-lightbulb" style="color: #f1c40f;"></i> Dicas Pedagógicas com IA</h3>
             <div id="aiTipsContent" class="ai-tips-container">
-                <!-- O conteúdo gerado pela IA será inserido aqui -->
-            </div>
+                </div>
             <div class="modal-actions">
                 <button type="button" class="modal-btn" data-close="aiTipsModal">Fechar</button>
             </div>
