--- a/index.html
+++ b/index.html
@@ -352,7 +352,9 @@
                                 <div class="form-group password-group">
                                     <label for="createStudentPassword">Senha:</label>
                                     <input type="password" id="createStudentPassword" required autocomplete="new-password">
-                                    <button type="button" id="generatePasswordBtn" class="generate-password-btn" title="Gerar senha automática">🪄</button>
+                                    <button type="button" id="generatePasswordBtn" class="generate-password-btn" title="Gerar senha automática">
+    <i class="fas fa-magic-wand-sparkles"></i>
+</button>
                                 </div>
                             </div>
                             <div class="form-actions">
