--- a/index.html
+++ b/index.html
@@ -489,6 +489,22 @@
         </div>
     </div>
 
+	<div id="resetPasswordModal" class="modal">
+    <div class="modal-content">
+        <h3 style="color: #764ba2;"><i class="fas fa-key"></i> Senha Redefinida!</h3>
+        <p>A senha do aluno(a) <strong id="resetStudentName" style="color: #2c3e50;"></strong> foi alterada. Anote os novos dados de acesso abaixo.</p>
+        
+        <div class="credentials-box">
+            <p><strong>Nova Senha:</strong> <span id="resetStudentPassword" style="font-weight: bold; font-size: 1.2rem; color: #764ba2;"></span></p>
+        </div>
+
+        <div class="modal-actions">
+            <button type="button" id="copyResetPasswordBtn" class="modal-btn primary"><i class="fas fa-copy"></i> Copiar Senha</button>
+            <button type="button" class="modal-btn" data-close="resetPasswordModal">Fechar</button>
+        </div>
+    </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
