--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
     <div id="aiTipsModal" class="modal">
         <div class="modal-content large">
-            <h3 id="aiTipsTitle"><i class="fas fa-lightbulb" style="color: #f1c40f;"></i> Dicas Pedagógicas com IA</h3>
+            <h3 id="aiTipsTitle"><i class="fas fa-rocket" style="color: #764ba2;"></i> Atividade Focada com IA</h3>
             <div id="aiTipsContent" class="ai-tips-container">
                 </div>
             <div class="modal-actions">
