--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 				</div>
 				<div class="attempts">
 					<i class="fas fa-heart"></i>
-					<span id="attempts">2</span> tentativas
+					<span id="attempts">3</span> tentativas
 				</div>
 			</div>
             <div class="game-actions">
@@ -257,7 +257,7 @@
                 </div>
 
 				<div class="question-text">
-					<h3 id="questionText">Qual letra faz este som?</h3>
+					<h3 id="questionText"></h3>
 				</div>
 			</div>
             
