--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-T">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo de Alfabetização - Aprenda as Letras!</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -82,7 +82,7 @@
                     <button type="submit" class="login-btn">Cadastrar</button>
                     <button type="button" class="register-btn" id="showLoginBtn">Já tenho conta</button>
                 </form>
-                 <button class="back-btn" data-target="userTypeScreen">
+               <button class="back-btn" data-target="userTypeScreen">
                     <i class="fas fa-arrow-left"></i> Voltar
                 </button>
             </div>
