--- a/index.html
+++ b/index.html
@@ -428,4 +428,85 @@
                     </div>
                     <div class="audio-playback">
                         <label>2. Ouça a Gravação:</label>
-                        <audio id="audioPlayback" controls></audio
+                        <audio id="audioPlayback" controls></audio>
+                    </div>
+                    <div id="recordStatus"></div>
+                    <button id="saveRecordingBtn" class="modal-btn primary" disabled><i class="fas fa-save"></i> Salvar Gravação</button>
+                </div>
+            </div>
+            <div class="modal-actions">
+                <button type="button" class="modal-btn" data-close="audioSettingsModal">Fechar</button>
+            </div>
+        </div>
+    </div>
+    
+    <div id="tutorialOverlay" class="tutorial-overlay">
+        <div class="tutorial-content">
+            <div id="tutorialMascot" class="mascot">
+                <i class="fas fa-cat"></i>
+            </div>
+            <div class="speech-bubble" id="tutorialText">
+            </div>
+            <button id="closeTutorialBtn" class="start-button">
+                <i class="fas fa-play"></i> Vamos Jogar!
+            </button>
+        </div>
+    </div>
+
+    <div id="studentCreatedModal" class="modal">
+        <div class="modal-content">
+            <h3 style="color: #4ECDC4;"><i class="fas fa-check-circle"></i> Aluno Criado com Sucesso!</h3>
+            <p>Anote os dados de acesso abaixo para entregar ao aluno.</p>
+            <div class="credentials-box">
+                <p><strong>Usuário:</strong> <span id="newStudentUsername"></span></p>
+                <p><strong>Senha:</strong> <span id="newStudentPassword" style="font-weight: bold; color: #764ba2;"></span></p>
+            </div>
+            <div class="modal-actions">
+                <button type="button" id="copyCredentialsBtn" class="modal-btn"><i class="fas fa-copy"></i> Copiar Dados</button>
+                <button type="button" class="modal-btn primary" data-close="studentCreatedModal">Fechar</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="chartModal" class="modal">
+        <div class="modal-content large">
+            <h3 id="chartModalTitle">Visualização Gráfica</h3>
+            <div class="chart-container">
+                <canvas id="myChartCanvas"></canvas>
+            </div>
+            <div class="modal-actions">
+                <button type="button" class="modal-btn" data-close="chartModal">Fechar</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="aiTipsModal" class="modal">
+        <div class="modal-content large">
+            <h3 id="aiTipsTitle"><i class="fas fa-rocket" style="color: #764ba2;"></i> Assistente Pedagógico IA</h3>
+            <div id="aiTipsContent" class="ai-tips-container">
+                </div>
+            <div class="modal-actions">
+                <button type="button" class="modal-btn" data-close="aiTipsModal">Fechar</button>
+            </div>
+        </div>
+    </div>
+
+	<div id="resetPasswordModal" class="modal">
+        <div class="modal-content">
+            <h3 style="color: #764ba2;"><i class="fas fa-key"></i> Senha Redefinida!</h3>
+            <p>A senha do aluno(a) <strong id="resetStudentName" style="color: #2c3e50;"></strong> foi alterada. Anote os novos dados de acesso abaixo.</p>
+            <div class="credentials-box">
+                <p><strong>Nova Senha:</strong> <span id="resetStudentPassword" style="font-weight: bold; font-size: 1.2rem; color: #764ba2;"></span></p>
+            </div>
+            <div class="modal-actions">
+                <button type="button" id="copyResetPasswordBtn" class="modal-btn primary"><i class="fas fa-copy"></i> Copiar Senha</button>
+                <button type="button" class="modal-btn" data-close="resetPasswordModal">Fechar</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
