--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo de Alfabetização - Aprenda as Letras!</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -376,10 +375,10 @@
                         <h4>Relatório de Progresso da Turma</h4>
                         <div class="sort-buttons">
                             <span>Ordenar por:</span>
-                            <button class="btn small sort-btn" data-sort="name">
+                            <button class="btn small sort-btn active" data-sort="name">
                                 <i class="fas fa-font"></i> Nome
                             </button>
-                            <button class="btn small sort-btn active" data-sort="last_played">
+                            <button class="btn small sort-btn" data-sort="last_played">
                                 <i class="fas fa-clock"></i> Último Acesso
                             </button>
                         </div>
