--- a/index.html
+++ b/index.html
@@ -200,9 +200,14 @@
 					<p>Olá! Eu sou o Robô Amigo! Vamos brincar?</p>
 				</div>
 			</div>
-			<button id="startButton" class="start-button">
-				<i class="fas fa-play"></i> Começar Aventura
-			</button>
+            <div class="student-start-actions">
+                <button id="startButton" class="start-button">
+                    <i class="fas fa-play"></i> Continuar Aventura
+                </button>
+                <button id="startCustomActivityBtn" class="start-button reinforcement" style="display: none;">
+                    <i class="fas fa-star-of-life"></i> Atividade de Reforço
+                </button>
+            </div>
 		</div>
 	</div>
 
